--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -48,3 +48,8 @@ $h2_size_desktop: 2rem;
 $h3_size_desktop: 1.7rem;
 $font_body_size_desktop: 1.7rem;
 $font_line-height-body: 1.8;
+
+// Variables involved//
+// $title-font-size: 1.5em;
+// $title-height: 120px;
+// $title-width: 270px;
