--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -327,7 +327,7 @@ hr {
   margin-bottom: 1.5rem; }
 
 img {
-  height: auto;
+  height: 100%;
   max-width: 100%; }
 
 /*--------------------------------------------------------------
@@ -524,6 +524,10 @@ div .menu-primary-menu-container {
 
 @media (min-width: 768px) {
   .menu-primary-menu-container {
+    font-size: 1.3rem; } }
+
+@media (min-width: 768px) {
+  .menu-primary-menu-container {
     white-space: nowrap;
     display: inline-block; }
     .menu-primary-menu-container ul li {
@@ -557,8 +561,9 @@ input[type="button"] {
   box-shadow: none !important; }
 
 button#responsive-menu-button {
-  top: 6px !important;
-  right: 8% !important;
+  top: 12px !important;
+  right: 6% !important;
+  background-color: transparent !important;
   background-color: transparent !important; }
 
 #primary-menu li.current-menu-item a {
@@ -650,7 +655,8 @@ div .secondary {
     div .secondary {
       text-align: right;
       padding: 0px 10px;
-      height: 70px;
+      margin-bottom: 0px;
+      height: 69px;
       margin-top: 40px; } }
   div .secondary .active {
     background-color: #4FC8A1; }
@@ -661,20 +667,29 @@ div .secondary {
         display: fixed; } }
   div .secondary li {
     display: inline-block;
-    padding: 8px 8px; }
+    padding: 8px 0px; }
     @media (min-width: 768px) {
       div .secondary li {
-        padding: 16px 15px; } }
+        padding: 16.4px 0px; } }
     div .secondary li a {
-      padding: 0 8px;
-      margin-right: 0;
-      font-weight: lighter;
-      font-size: 1.2rem;
+      color: white;
+      padding: 0 20px;
       text-decoration: none;
-      color: white; }
+      font-weight: lighter;
+      font-size: 1.2rem; }
       @media (min-width: 768px) {
         div .secondary li a {
           font-size: 1.4rem; } }
+
+div .secondary a {
+  display: inline-block;
+  border-left: solid 1px white; }
+
+div .secondary li:first-child a {
+  border-left: none; }
+
+div .secondary li:nth-child(2) a {
+  border-left: none; }
 
 div .transparent-menu {
   position: fixed;
@@ -1364,6 +1379,8 @@ body {
   .main-history .history-img1 {
     display: block; }
     .main-history .history-img1 img {
+      height: 100%;
+      width: 100%;
       padding-top: 40px;
       float: left; }
     @media (min-width: 768px) {
@@ -1402,7 +1419,7 @@ body {
       position: relative; }
       .history-content blockquote p {
         margin: 0;
-        font-size: 2rem; }
+        font-size: 1.8rem; }
     .history-content blockquote::before {
       content: "";
       display: inline-block;
@@ -1410,8 +1427,7 @@ body {
       top: 5PX;
       left: 0PX;
       height: 100%;
-      border-left: solid 12px #D93B57;
-      font-size: 1.5rem; }
+      border-left: solid 12px #D93B57; }
     .history-content p {
       display: inline-block;
       text-align: left; } }
@@ -1506,7 +1522,7 @@ body {
       color: #248e6a;
       height: auto;
       padding: 0;
-      bottom: 30px;
+      bottom: 44px;
       line-height: 0.9rem;
       right: 22px;
       position: absolute;
@@ -1610,7 +1626,7 @@ body {
         position: relative; }
         .materials-contents blockquote p {
           margin: 0;
-          font-size: 2rem; }
+          font-size: 1.8rem; }
       .materials-contents blockquote::before {
         content: "";
         display: inline-block;
@@ -1618,8 +1634,7 @@ body {
         top: 5PX;
         left: 0PX;
         height: 100%;
-        border-left: solid 12px #D93B57;
-        font-size: 1.5rem; }
+        border-left: solid 12px #D93B57; }
       .materials-contents p {
         display: inline-block;
         text-align: left; }
@@ -1674,7 +1689,7 @@ body {
       position: relative; }
       .benefits-content blockquote p {
         margin: 0;
-        font-size: 2rem; }
+        font-size: 1.8rem; }
     .benefits-content blockquote::before {
       content: "";
       display: inline-block;
@@ -1682,8 +1697,7 @@ body {
       top: 5PX;
       left: 0PX;
       height: 100%;
-      border-left: solid 12px #D93B57;
-      font-size: 1.5rem; }
+      border-left: solid 12px #D93B57; }
     .benefits-content p {
       display: inline-block;
       text-align: left; } }
@@ -1764,7 +1778,7 @@ body {
   border-radius: 6px;
   letter-spacing: 0.8px;
   display: block;
-  margin: 10px auto;
+  margin: 60px auto;
   text-shadow: none;
   width: 300px;
   height: 60px; }
