--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -28,6 +28,8 @@
         display: block;
 
         img {
+          height:100%;
+          width:100%;
             padding-top: 40px;
             float: left;
         }
@@ -66,9 +68,7 @@
         width: 100%;
     }
     @include desktop {
-      @include quote{
-
-        }
+         @include quote{}
     }
 }
 ////************philosophy Section ************/////
@@ -79,7 +79,6 @@
 
 .main-philosophy {
     margin: 100px auto;
-
     min-width: 75%;
     height: auto;
     @include flex(center,space-around);
@@ -160,7 +159,7 @@
             color: #248e6a;
             height: auto;
             padding: 0;
-            bottom: 30px;
+            bottom: 44px;
             line-height: 0.9rem;
             right: 22px;
             position: absolute;
@@ -188,8 +187,7 @@
             position: absolute;
         }
 
-
-      p {
+        p {
             text-align: left;
             display: inline-block;
             font-family: $font_body;
@@ -268,10 +266,7 @@
     @include desktop {
         width: 60%;
         min-width: 50%;
-
-        @include quote{
-
-        }
+        @include quote {}
 
         p {
             display: inline;
@@ -287,8 +282,7 @@
 
 .benefits li {
     list-style-type: disc;
-    @include desktop {
-    };
+    @include desktop {};
 }
 
 .first-benefits-section {
@@ -317,9 +311,7 @@
 .benefits-content {
     width: 100%;
     @include desktop {
-        @include quote{
-
-        }
+         @include quote{}
     }
 }
 
@@ -397,7 +389,7 @@
 ///rotate the arrow and toggle the contents
 
 .rotate {
-  @include rotate(180deg);
+    @include rotate(180deg);
 }
 
 .toggle {
@@ -411,7 +403,6 @@
     cursor: pointer;
 }
 /******** Start Resources Section ********/
-
 .main-resources {
     border-bottom: none;
     height: 400px;
@@ -423,7 +414,7 @@
     @include border-radius (6px);
     letter-spacing: 0.8px;
     display: block;
-    margin: 10px auto;
+    margin: 60px auto;
     text-shadow: none;
     width: 300px;
     height: 60px;
