--- a/themes/montessori-theme/sass/_contact-form.scss
+++ b/themes/montessori-theme/sass/_contact-form.scss
@@ -63,7 +63,7 @@
                 .wpcf7-form-control-wrap {
                     width: 300px;
                     height: 40px;
-                    background-color: #FFFFFF;
+                    background-color: #fff;
                     border-radius: 3px;
                     padding: 10px 0;
 
