--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -72,9 +72,9 @@
     height: 160.50px;
     align-self: center;
 }
-img {
-    height: 100%;
-}
+// img {
+//     height: 100%;
+// }
 @include desktop {}
 // This for green circle btn
 .involved {
