--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -951,6 +951,7 @@ div .secondary {
         background-color: rgba(0, 0, 0, 0.74);
         position: relative; } }
     .site-main .home .home-wrapper .home-img {
+      margin: 0 auto;
       height: auto; }
       @media (min-width: 768px) {
         .site-main .home .home-wrapper .home-img {
@@ -1037,7 +1038,7 @@ div .secondary {
       margin: 20px -60px;
       padding-top: 70px; } }
   .site-main .links-wrapper p {
-    width: 380px;
+    width: 408px;
     font-family: "Noto Sans";
     font-size: 20px;
     line-height: 40px;
@@ -1045,8 +1046,8 @@ div .secondary {
     margin: 40px; }
     @media (min-width: 768px) {
       .site-main .links-wrapper p {
-        padding: 30px 40px;
-        margin: 15px 40px; } }
+        padding: 40px;
+        margin: 15px 30px; } }
   .site-main .links-wrapper .benifits .green-btn {
     background-color: #4FC8A1;
     border-radius: 6px;
@@ -1153,7 +1154,7 @@ div .secondary {
           display: flex;
           top: 18rem;
           position: relative;
-          right: -950px;
+          right: -885px;
           width: 25%;
           font-size: 18px; } }
     .site-main .support-wrapper .information blockquote {
@@ -1196,7 +1197,8 @@ div .secondary {
       display: flex;
       -ms-flex-pack: distribute;
           justify-content: space-around;
-      width: 65%; }
+      width: 65%;
+      margin: 65px 0px; }
       .site-main .support-wrapper .information .btn .red-btn {
         width: 185px;
         height: 47px;
@@ -1216,7 +1218,6 @@ div .secondary {
         @media (min-width: 768px) {
           .site-main .support-wrapper .information .btn .red-btn {
             color: #fff;
-            margin-left: 80px;
             font-family: 'Noto Sans';
             font-size: 24px;
             font-weight: 300;
@@ -1277,7 +1278,7 @@ div .secondary {
       width: 480px; }
   .site-main .all-features .features-wrapper {
     /* 	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45); */
-    width: 200px;
+    width: 30%;
     box-sizing: border-box;
     width: 480.27px;
     position: relative;
@@ -1306,7 +1307,7 @@ div .secondary {
         .site-main .all-features .features-wrapper .features-flipper {
           display: -ms-flexbox;
           display: flex;
-          width: 300px;
+          width: 100%;
           height: auto;
           background-color: #AFF1D3;
           -webkit-transition: 3s;
@@ -1319,6 +1320,8 @@ div .secondary {
           transform-style: preserve-3d;
           border-radius: 10px; }
           .site-main .all-features .features-wrapper .features-flipper:hover {
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
             transform: rotateY(180deg); } }
       .site-main .all-features .features-wrapper .features-flipper .front {
         height: auto;
@@ -1405,7 +1408,7 @@ body {
   .wpcf7 .wpcf7-form p label .wpcf7-form-control-wrap {
     width: 300px;
     height: 40px;
-    background-color: #FFFFFF;
+    background-color: #fff;
     border-radius: 3px;
     padding: 10px 0; }
     .wpcf7 .wpcf7-form p label .wpcf7-form-control-wrap input {
@@ -2133,9 +2136,6 @@ body {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center; }
-
-img {
-  height: 100%; }
 
 .involved .circle-btn {
   width: 200px;
