--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -1,193 +1,308 @@
-.site-main {
-    width: 100%;
-    display: flex;
-    margin: 0 auto;
-    height: auto;
-  }
-    .main-involved-wrapper {
-     padding-top: 50px;
-
-}
-.involved-title {
-    a {
-        width: 200px;
-        height: 120px;
-        margin-top: 50px;
-        background-color: #4FC8A1;
-        margin-left: 25px;
-        margin-bottom: 25px;
-        font-family: Asap;
-        font-size: 24px;
-        line-height: 27px;
-        color: #000;
-        text-align: center;
-        display: flex;
-        justify-content: space-around;
-    }
-    a:hover {
-        color: #248e6a;
-    }
-}
-.border-radius {
-    border-left: solid 12px $border_left_red;
-    border-color: red;
-}
-.gre-button {
-
-    width: 261px;
-    height: 47px;
-    background-color: #4FC8A1;
-    border-radius: 6px;
-    text-decoration: none;
-    font-size: 15px;
-    font-family: Asap;
-
-    font-family: "Noto Sans";
-    font-weight: bold;
-    text-align: center;
-    line-height: 30px;
-    display: block;
-       a {
-         color:#fff;
-       }
-}
-
-    // This is for green line
-    .text-shadow {
-        border-top: 10px solid #248e6a;
-        width: 100%;
-        margin-bottom: 10px;
-        // @include border-radius (10px);
-        // border-right: 1px solid #248E6A;
-    }
-
-
-// This is for support now container
-.support-containar {
-    display: flex;
-    justify-content: center;
-}
-.support-img {
-    width: 150px 60px;
-    height: 160.50px;
-    align-self: center;
-}
-// img {
-//     height: 100%;
+// .site-main {
+//     width: 100%;
+//     display: flex;
+//     margin: 0 auto;
+//     height: auto;
+//   }
+//     .main-involved-wrapper {
+//      padding-top: 50px;
+//
 // }
-@include desktop {}
-// This for green circle btn
-.involved {
-    .circle-btn {
-        width: 200px;
-        height: 178px;
-        display: flex;
-        height: 200px;
-        -webkit-border-radius: 150%;
-        -moz-border-radius: 150%;
-        -ms-border-radius: 150%;
-        -o-border-radius: 150%;
-        border-radius: 150%;
-        background-color: #4fc8a1;
-        margin: 130px;
-        text-align: center;
-        color: #fff;
-        padding-top: 50px;
-        font-weight: 300;
-        // width: 157.58px;
-        // height: 108px;
-        font-family: Asap;
-        font-size: 18px;
-        text-align: center;
-        line-height: 27px;
+// .involved-title {
+//     a {
+//         width: 200px;
+//         height: 120px;
+//         margin-top: 50px;
+//         background-color: #4FC8A1;
+//         margin-left: 25px;
+//         margin-bottom: 25px;
+//         font-family: Asap;
+//         font-size: 24px;
+//         line-height: 27px;
+//         color: #000;
+//         text-align: center;
+//         display: flex;
+//         justify-content: space-around;
+//     }
+//     a:hover {
+//         color: #248e6a;
+//     }
+// }
+// .border-radius {
+//     border-left: solid 12px $border_left_red;
+//     border-color: red;
+// }
+// .gre-button {
+//
+//     width: 261px;
+//     height: 47px;
+//     background-color: #4FC8A1;
+//     border-radius: 6px;
+//     text-decoration: none;
+//     font-size: 15px;
+//     font-family: Asap;
+//
+//     font-family: "Noto Sans";
+//     font-weight: bold;
+//     text-align: center;
+//     line-height: 30px;
+//     display: block;
+//        a {
+//          color:#fff;
+//        }
+// }
+//
+//     // This is for green line
+//     .text-shadow {
+//         border-top: 10px solid #248e6a;
+//         width: 100%;
+//         margin-bottom: 10px;
+//         // @include border-radius (10px);
+//         // border-right: 1px solid #248E6A;
+//     }
+//
+//
+// // This is for support now container
+// .support-containar {
+//     display: flex;
+//     justify-content: center;
+// }
+// .support-img {
+//     width: 150px 60px;
+//     height: 160.50px;
+//     align-self: center;
+// }
+// // img {
+// //     height: 100%;
+// // }
+// @include desktop {}
+// // This for green circle btn
+// .involved {
+//     .circle-btn {
+//         width: 200px;
+//         height: 178px;
+//         display: flex;
+//         height: 200px;
+//         -webkit-border-radius: 150%;
+//         -moz-border-radius: 150%;
+//         -ms-border-radius: 150%;
+//         -o-border-radius: 150%;
+//         border-radius: 150%;
+//         background-color: #4fc8a1;
+//         margin: 130px;
+//         text-align: center;
+//         color: #fff;
+//         padding-top: 50px;
+//         font-weight: 300;
+//         // width: 157.58px;
+//         // height: 108px;
+//         font-family: Asap;
+//         font-size: 18px;
+//         text-align: center;
+//         line-height: 27px;
+//     }
+// }
+// // This for volenteer btn
+// .re-btn {
+//     width: 175.38px;
+//     height: 47px;
+//     border-radius: 6px;
+//     background-color: #f76072;
+//     color: #fff;
+//     margin-left: 60px;
+//     padding: 10px;
+//     box-shadow: none;
+//     font-family: "Noto Sans";
+//     font-weight: 300;
+//     text-shadow: none;
+//     letter-spacing: 0.8px;
+//     text-decoration: none;
+//     font-family: "Noto Sans";
+//     font-size: 15px;
+//     font-weight: bold;
+//     text-align: center;
+//     line-height: 27px;
+// }
+// // This for donation
+// .pink-btn {
+//     width: 175.38px;
+//     height: 47px;
+//     background-color: #f76072;
+//     border-radius: 6px;
+//     font-family: "Noto Sans";
+//     font-weight: bold;
+//     text-align: center;
+//     line-height: 30px;
+//     color: #fff;
+//     margin-left: 60px;
+//     padding: 8px;
+//     box-shadow: none;
+//     text-shadow: none;
+//     letter-spacing: 0.8px;
+//     text-decoration: none;
+//     float: left;
+// }
+// // This for you click on volnteeer shaw the other btn
+// .contact-container {
+//     .contact-person {
+//         color: #fff;
+//         background-color: #4fc8a1;
+//         font-size: 10px;
+//         flex-direction: row;
+//         text-align: center;
+//         width: 50px;
+//     }
+// }
+// .involved {
+//     .green-btn {
+//         padding: 20px 25px 19px 19px;
+//         font-size: 25px;
+//         height: 200px;
+//         display: flex;
+//         -webkit-border-radius: 150%;
+//         -moz-border-radius: 150%;
+//         -ms-border-radius: 150%;
+//         -o-border-radius: 150%;
+//         border-radius: 150%;
+//         background-color: #4fc8a1;
+//         display: block;
+//         width: 200px;
+//         text-align: center;
+//         color: #fff;
+//         text-align: center;
+//     }
+// }
+// .involved {
+//     .red-btn {
+//         padding: 15px 40px;
+//         background-color: #F76072;
+//         border-radius: 6px;
+//         color: #fff;
+//         margin-left: 80px;
+//         font-family: "Noto Sans";
+//         font-size: 24px;
+//         font-weight: 300;
+//         text-shadow: none;
+//         letter-spacing: 0.8px;
+//         text-align: center;
+//         display: inline;
+//         line-height: inherit;
+//         margin: 20px;
+//         flex-direction: row;
+//     }
+// }
+// past envet section
+.past-event-wrapper {
+    margin: 0 auto;
+    .past-event {
+        border-top: 2px solid #248E6A;
+        margin: 0 60px;
+        .event-years {
+            font-size: 20px;
+            .year {
+                color: #248E6A;
+                ul {
+                    color: #000;
+                    line-height: 5rem;
+                }
+            }
+            //year
+        }
+        //event-years
+    }
+    //past-event
+}
+//past-event-wrapper
+// suppoert now section
+.support-section {
+    margin: 0 60px;
+    .title {
+        border-top: 2px solid #248E6A;
+        // margin: 0px 60px;
+    }
+    .image-wrapper {
+        display: inline-flex;
+        p {
+            width: 100%;
+            height: 80px;
+            position: absolute;
+            margin-top: 185px;
+            color: #fff;
+            font-size: 24px;
+            background-color: rgba(0,0,0,.74);
+            text-align: center;
+            padding: 20px;
+        }
+        .first-image {
+            margin: 30px;
+            position: relative;
+            display: flex;
+            z-index: -1;
+            height: auto;
+        }
+        .second-image {
+            margin: 30px;
+            position: relative;
+            display: flex;
+            z-index: -1;
+            height: auto;
+        }
+        .third-image {
+            margin: 30px;
+            position: relative;
+            display: flex;
+            z-index: -1;
+            height: auto;
+        }
+    }
+    .bracket {
+        padding: 0;
+        margin: 10px 0 20px 30px;
+        height: 7rem;
+        @include desktop {
+            margin: 0;
+            min-width: 16rem;
+            height: 8rem;
+        }
+        img {
+            position: relative;
+            height: 100%;
+            width: 100%;
+            padding-top: 0;
+            @include desktop {
+                height: 50px;
+                width: 100%;
+                padding-top: 0;
+                margin-top: 0;
+            }
+        }
     }
 }
-// This for volenteer btn
-.re-btn {
-    width: 175.38px;
-    height: 47px;
-    border-radius: 6px;
-    background-color: #f76072;
-    color: #fff;
-    margin-left: 60px;
-    padding: 10px;
-    box-shadow: none;
-    font-family: "Noto Sans";
-    font-weight: 300;
-    text-shadow: none;
-    letter-spacing: 0.8px;
-    text-decoration: none;
-    font-family: "Noto Sans";
-    font-size: 15px;
-    font-weight: bold;
+// your involvment section
+.your-involvement-wrapper {
+    width: 250px;
+    height: 250px;
+    font-family: 'Asap';
+    font-size: 24px;
     text-align: center;
     line-height: 27px;
-}
-// This for donation
-.pink-btn {
-    width: 175.38px;
-    height: 47px;
-    background-color: #f76072;
-    border-radius: 6px;
-    font-family: "Noto Sans";
-    font-weight: bold;
-    text-align: center;
-    line-height: 30px;
     color: #fff;
-    margin-left: 60px;
-    padding: 8px;
-    box-shadow: none;
-    text-shadow: none;
-    letter-spacing: 0.8px;
-    text-decoration: none;
-    float: left;
-}
-// This for you click on volnteeer shaw the other btn
-.contact-container {
-    .contact-person {
-        color: #fff;
-        background-color: #4fc8a1;
-        font-size: 10px;
-        flex-direction: row;
+    background-color: #4FC8A1;
+    text-align: center;
+    margin: 0 auto;
+    border-radius: 50%;
+    p {
         text-align: center;
-        width: 50px;
+        padding: 40px;
+        font-size: 32px;
     }
 }
-.involved {
-    .green-btn {
-        padding: 20px 25px 19px 19px;
-        font-size: 25px;
-        height: 200px;
-        display: flex;
-        -webkit-border-radius: 150%;
-        -moz-border-radius: 150%;
-        -ms-border-radius: 150%;
-        -o-border-radius: 150%;
-        border-radius: 150%;
-        background-color: #4fc8a1;
-        display: block;
-        width: 200px;
-        text-align: center;
+.make-donation-wrapper {
+    height: auto;
+    .donation {
         color: #fff;
-        text-align: center;
-    }
-}
-.involved {
-    .red-btn {
-        padding: 15px 40px;
         background-color: #F76072;
-        border-radius: 6px;
-        color: #fff;
-        margin-left: 80px;
-        font-family: "Noto Sans";
-        font-size: 24px;
-        font-weight: 300;
-        text-shadow: none;
-        letter-spacing: 0.8px;
-        text-align: center;
-        display: inline;
-        line-height: inherit;
-        margin: 20px;
-        flex-direction: row;
+        margin: 40px;
+        padding: 30px;
     }
 }
