--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -960,9 +960,6 @@ div .secondary {
           height: 555px;
           z-index: -1;
           position: absolute; } }
-      @media (min-width: 768px) {
-        .site-main .home .home-wrapper .home-img .welcome-wraapper {
-          margin: 40px; } }
     .site-main .home .home-wrapper h2 {
       font-family: 'Asap';
       font-size: 36px;
@@ -977,7 +974,10 @@ div .secondary {
       border-bottom: 4px solid #fff; }
       @media (min-width: 768px) {
         .site-main .home .home-wrapper h2 {
-          font-size: 46px; } }
+          font-size: 46px;
+          height: 120px;
+          padding-top: 33px;
+          margin: 30px 50px; } }
     .site-main .home .home-wrapper p {
       height: 160px;
       font-family: "Noto Sans";
@@ -991,7 +991,8 @@ div .secondary {
           height: 230px;
           font-family: "Noto Sans";
           font-size: 24px;
-          line-height: 46px; } }
+          line-height: 46px;
+          margin: 30px 50px; } }
     .site-main .home .home-wrapper .red-btn {
       background-color: #F76072;
       border-radius: 6px;
@@ -1005,12 +1006,13 @@ div .secondary {
       letter-spacing: 0.8px; }
       @media (min-width: 768px) {
         .site-main .home .home-wrapper .red-btn {
-          padding: 10px;
+          padding: 17px;
           font-size: 24px;
           display: block;
           max-width: 320px;
-          margin: 90px 100px;
-          text-align: center; } }
+          text-align: center;
+          height: 75px;
+          margin: 70px 45px; } }
 
 .site-main .link-title h2 {
   padding: 0;
@@ -1127,10 +1129,10 @@ div .secondary {
           font-family: "Asap";
           font-size: 48px;
           line-height: 55px;
-          margin: 45px 0px;
+          margin: 45px 0;
           box-sizing: border-box;
           width: 100%;
-          padding: 45px 0px; } }
+          padding: 45px 0; } }
     @media (min-width: 768px) {
       .site-main .support-wrapper .information .support-img-wrapper {
         height: 0; } }
@@ -1144,7 +1146,7 @@ div .secondary {
           display: -ms-flexbox;
           display: flex;
           position: absolute;
-          right: 0px;
+          right: 0;
           margin: -200px 100px; } }
     .site-main .support-wrapper .information .support-img-wrapper p {
       text-align: center; }
@@ -1168,7 +1170,7 @@ div .secondary {
           margin: 27px 119px;
           width: 70%;
           height: auto;
-          padding: 0px; }
+          padding: 0; }
           .site-main .support-wrapper .information blockquote p {
             font-size: 24px; } }
     .site-main .support-wrapper .information p {
@@ -1198,7 +1200,7 @@ div .secondary {
       -ms-flex-pack: distribute;
           justify-content: space-around;
       width: 65%;
-      margin: 65px 0px; }
+      margin: 65px 0; }
       .site-main .support-wrapper .information .btn .red-btn {
         width: 185px;
         height: 47px;
@@ -1259,25 +1261,38 @@ div .secondary {
           text-align: center;
           height: 55px; } }
 
+.site-main .the-title {
+  box-sizing: border-box;
+  width: 440px;
+  border-top: 2px solid #2EB688;
+  padding-top: 50px;
+  height: 42px;
+  font-family: 'Asap';
+  font-size: 36px;
+  line-height: 0;
+  color: #000;
+  margin-left: 30px; }
+  @media (min-width: 768px) {
+    .site-main .the-title {
+      width: 100%;
+      font-size: 40px;
+      padding-top: 100px; } }
+  .site-main .the-title .container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 480px; }
+
 .site-main .all-features {
-  margin-bottom: 30px; }
-  .site-main .all-features h2 {
-    box-sizing: border-box;
-    width: 440px;
-    border-top: 2px solid #2EB688;
-    padding-top: 50px;
-    height: 42px;
-    font-family: 'Asap';
-    font-size: 36px;
-    line-height: 0;
-    color: #000;
-    margin-left: 30px; }
-    .site-main .all-features h2 .container {
-      margin-left: auto;
-      margin-right: auto;
-      width: 480px; }
+  margin-bottom: 30px;
+  width: 100%;
+  height: 100%; }
+  @media (min-width: 768px) {
+    .site-main .all-features {
+      display: -ms-flexbox;
+      display: flex;
+      height: 480px;
+      width: 400px; } }
   .site-main .all-features .features-wrapper {
-    /* 	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45); */
     width: 30%;
     box-sizing: border-box;
     width: 480.27px;
@@ -1287,13 +1302,20 @@ div .secondary {
     font-size: 15px;
     color: #000;
     text-decoration: none; }
+    @media (min-width: 768px) {
+      .site-main .all-features .features-wrapper {
+        display: -ms-flexbox;
+        display: flex;
+        height: 380px;
+        width: 380px;
+        margin: 10px 30px;
+        line-height: 3rem; } }
     .site-main .all-features .features-wrapper .features-flipper {
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
-      width: 200px;
-      height: 200px;
       background-color: #AFF1D3;
-      margin-top: 20px;
+      margin: 20px;
+      height: 180px;
       display: flex;
       display: -ms-flexbox;
       -ms-flex-align: center;
@@ -1305,6 +1327,8 @@ div .secondary {
       position: relative; }
       @media (min-width: 768px) {
         .site-main .all-features .features-wrapper .features-flipper {
+          height: 300px;
+          width: 300px;
           display: -ms-flexbox;
           display: flex;
           width: 100%;
@@ -1324,10 +1348,10 @@ div .secondary {
             backface-visibility: hidden;
             transform: rotateY(180deg); } }
       .site-main .all-features .features-wrapper .features-flipper .front {
-        height: auto;
+        height: 145px;
         text-align: center;
         overflow: hidden;
-        padding: 20px;
+        padding: 36px;
         width: 450px;
         font-family: 'Asap';
         font-size: 24px;
@@ -1338,7 +1362,12 @@ div .secondary {
         @media (min-width: 768px) {
           .site-main .all-features .features-wrapper .features-flipper .front {
             display: -ms-flexbox;
-            display: flex; } }
+            display: flex;
+            font-size: 36px;
+            line-height: 3rem;
+            text-align: start;
+            padding: 40px;
+            height: 380px; } }
       .site-main .all-features .features-wrapper .features-flipper .features-back {
         border: 1px solid #248E6A;
         margin: 0;
@@ -1353,11 +1382,22 @@ div .secondary {
         transform: rotateY(180deg); }
         @media (min-width: 768px) {
           .site-main .all-features .features-wrapper .features-flipper .features-back {
-            display: -ms-flexbox;
-            display: flex; } }
-  .site-main .all-features .green-btn {
-    color: #248E6A;
-    text-decoration: none; }
+            display: inline-block;
+            text-align: start;
+            padding: 8px;
+            height: 370px; }
+            .site-main .all-features .features-wrapper .features-flipper .features-back p {
+              visibility: visible;
+              -webkit-backface-visibility: hidden;
+              backface-visibility: hidden;
+              font-family: 'Asap';
+              font-size: 22px; } }
+        .site-main .all-features .features-wrapper .features-flipper .features-back .btn {
+          text-align: center;
+          display: inline-block;
+          text-align: center;
+          color: #248E6A;
+          text-decoration: none; }
 
 a {
   text-decoration: none; }
@@ -2069,170 +2109,102 @@ body {
     width: 55%;
     border-top: solid 3px #4FC8A1; }
 
-.site-main {
-  width: 100%;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0 auto;
-  height: auto; }
+.past-event-wrapper {
+  margin: 0 auto; }
+  .past-event-wrapper .past-event {
+    border-top: 2px solid #248E6A;
+    margin: 0 60px; }
+    .past-event-wrapper .past-event .event-years {
+      font-size: 20px; }
+      .past-event-wrapper .past-event .event-years .year {
+        color: #248E6A; }
+        .past-event-wrapper .past-event .event-years .year ul {
+          color: #000;
+          line-height: 5rem; }
 
-.main-involved-wrapper {
-  padding-top: 50px; }
+.support-section {
+  margin: 0 60px; }
+  .support-section .title {
+    border-top: 2px solid #248E6A; }
+  .support-section .image-wrapper {
+    display: -ms-inline-flexbox;
+    display: inline-flex; }
+    .support-section .image-wrapper p {
+      width: 100%;
+      height: 80px;
+      position: absolute;
+      margin-top: 185px;
+      color: #fff;
+      font-size: 24px;
+      background-color: rgba(0, 0, 0, 0.74);
+      text-align: center;
+      padding: 20px; }
+    .support-section .image-wrapper .first-image {
+      margin: 30px;
+      position: relative;
+      display: -ms-flexbox;
+      display: flex;
+      z-index: -1;
+      height: auto; }
+    .support-section .image-wrapper .second-image {
+      margin: 30px;
+      position: relative;
+      display: -ms-flexbox;
+      display: flex;
+      z-index: -1;
+      height: auto; }
+    .support-section .image-wrapper .third-image {
+      margin: 30px;
+      position: relative;
+      display: -ms-flexbox;
+      display: flex;
+      z-index: -1;
+      height: auto; }
+  .support-section .bracket {
+    padding: 0;
+    margin: 10px 0 20px 30px;
+    height: 7rem; }
+    @media (min-width: 768px) {
+      .support-section .bracket {
+        margin: 0;
+        min-width: 16rem;
+        height: 8rem; } }
+    .support-section .bracket img {
+      position: relative;
+      height: 100%;
+      width: 100%;
+      padding-top: 0; }
+      @media (min-width: 768px) {
+        .support-section .bracket img {
+          height: 50px;
+          width: 100%;
+          padding-top: 0;
+          margin-top: 0; } }
 
-.involved-title a {
-  width: 200px;
-  height: 120px;
-  margin-top: 50px;
-  background-color: #4FC8A1;
-  margin-left: 25px;
-  margin-bottom: 25px;
-  font-family: Asap;
+.your-involvement-wrapper {
+  width: 250px;
+  height: 250px;
+  font-family: 'Asap';
   font-size: 24px;
+  text-align: center;
   line-height: 27px;
-  color: #000;
-  text-align: center;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around; }
-
-.involved-title a:hover {
-  color: #248e6a; }
-
-.border-radius {
-  border-left: solid 12px #D93B57;
-  border-color: red; }
-
-.gre-button {
-  width: 261px;
-  height: 47px;
+  color: #fff;
   background-color: #4FC8A1;
-  border-radius: 6px;
-  text-decoration: none;
-  font-size: 15px;
-  font-family: Asap;
-  font-family: "Noto Sans";
-  font-weight: bold;
   text-align: center;
-  line-height: 30px;
-  display: block; }
-  .gre-button a {
-    color: #fff; }
+  margin: 0 auto;
+  border-radius: 50%; }
+  .your-involvement-wrapper p {
+    text-align: center;
+    padding: 40px;
+    font-size: 32px; }
 
-.text-shadow {
-  border-top: 10px solid #248e6a;
-  width: 100%;
-  margin-bottom: 10px; }
-
-.support-containar {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center; }
-
-.support-img {
-  width: 150px 60px;
-  height: 160.50px;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center; }
-
-.involved .circle-btn {
-  width: 200px;
-  height: 178px;
-  display: -ms-flexbox;
-  display: flex;
-  height: 200px;
-  border-radius: 150%;
-  background-color: #4fc8a1;
-  margin: 130px;
-  text-align: center;
-  color: #fff;
-  padding-top: 50px;
-  font-weight: 300;
-  font-family: Asap;
-  font-size: 18px;
-  text-align: center;
-  line-height: 27px; }
-
-.re-btn {
-  width: 175.38px;
-  height: 47px;
-  border-radius: 6px;
-  background-color: #f76072;
-  color: #fff;
-  margin-left: 60px;
-  padding: 10px;
-  box-shadow: none;
-  font-family: "Noto Sans";
-  font-weight: 300;
-  text-shadow: none;
-  letter-spacing: 0.8px;
-  text-decoration: none;
-  font-family: "Noto Sans";
-  font-size: 15px;
-  font-weight: bold;
-  text-align: center;
-  line-height: 27px; }
-
-.pink-btn {
-  width: 175.38px;
-  height: 47px;
-  background-color: #f76072;
-  border-radius: 6px;
-  font-family: "Noto Sans";
-  font-weight: bold;
-  text-align: center;
-  line-height: 30px;
-  color: #fff;
-  margin-left: 60px;
-  padding: 8px;
-  box-shadow: none;
-  text-shadow: none;
-  letter-spacing: 0.8px;
-  text-decoration: none;
-  float: left; }
-
-.contact-container .contact-person {
-  color: #fff;
-  background-color: #4fc8a1;
-  font-size: 10px;
-  -ms-flex-direction: row;
-      flex-direction: row;
-  text-align: center;
-  width: 50px; }
-
-.involved .green-btn {
-  padding: 20px 25px 19px 19px;
-  font-size: 25px;
-  height: 200px;
-  display: -ms-flexbox;
-  display: flex;
-  border-radius: 150%;
-  background-color: #4fc8a1;
-  display: block;
-  width: 200px;
-  text-align: center;
-  color: #fff;
-  text-align: center; }
-
-.involved .red-btn {
-  padding: 15px 40px;
-  background-color: #F76072;
-  border-radius: 6px;
-  color: #fff;
-  margin-left: 80px;
-  font-family: "Noto Sans";
-  font-size: 24px;
-  font-weight: 300;
-  text-shadow: none;
-  letter-spacing: 0.8px;
-  text-align: center;
-  display: inline;
-  line-height: inherit;
-  margin: 20px;
-  -ms-flex-direction: row;
-      flex-direction: row; }
+.make-donation-wrapper {
+  height: auto; }
+  .make-donation-wrapper .donation {
+    color: #fff;
+    background-color: #F76072;
+    margin: 40px;
+    padding: 30px; }
 
 /*--------------------------------------------------------------
 # NW Program Page
