--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -251,13 +251,6 @@ h5,
 h6 {
   clear: both; }
 
-/* Copy */
-cite,
-dfn,
-em,
-i {
-  font-style: italic; }
-
 /*Elements*/
 .content-wrapper {
   max-width: 90%;
@@ -1379,8 +1372,6 @@ body {
   .main-history .history-img1 {
     display: block; }
     .main-history .history-img1 img {
-      height: 100%;
-      width: 100%;
       padding-top: 40px;
       float: left; }
     @media (min-width: 768px) {
@@ -1394,9 +1385,10 @@ body {
         margin-top: 100px;
         -ms-flex-item-align: end;
             align-self: flex-end;
-        width: 430px;
-        height: 500px;
-        padding-bottom: 100px; } }
+        padding-bottom: 100px; }
+        .main-history .history-img img {
+          width: 430px;
+          height: 500px; } }
 
 .history-content {
   width: 100%; }
