--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -1,3 +1,6 @@
+
+///******Extra shared files*****///
+
 ///******extra shared files*****///
 .red-border-container {
     width: 90%;
@@ -11,7 +14,9 @@
     p {
       margin: 0 auto;
     }
-  }
+}
+/// Container wrapper to wrap all the content in the pages//
+  
 /// this framework is for the block quotes to make the red bar left//
 .content-wrapper {
     border-bottom: solid 3px $color_btn_green;
